--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ env:
   ECR_REPOSITORY: medusa-repo  # Change to your ECR repository name
   ECS_CLUSTER: medusa-cluster  # Change to your ECS cluster name
   ECS_SERVICE: medusa-service  # Change to your ECS service name
-  ECS_TASK_DEFINITION: medusa-task-def.json  # Task definition file
+  ECS_TASK_DEFINITION: task-definition.json  # Task definition file
 
 jobs:
   deploy:
